<resources>
    <!--MainActivity-->
    <string name="app_name">Calliope Noises</string>         <!--Needs translations-->
    <string name="press_vtuber">Press Calliope!</string>     <!--Needs translations-->
    <string name="sit_back">Sit Back &amp; Chill</string>
    <!--AppMenu-->
    <string name="version">Version</string>
    <string name="app_version" translatable="false">2021.12 REV-3</string>
    <string name="youtubeChannelName" translatable="false">Mori Calliope Ch. </string>
    <string name="youtube_channel">Youtube Channel</string>
    <string name="channel_tagline">#1 Chad Dad</string>
    <string name="clicker_settings">Clicker Settings</string>
    <string name="sounds">Sounds</string>
    <string name="downloads">Downloads</string>
    <string name="information">Information</string>
    <string name="more_apps">More Apps</string>
    <string name="failedAuth">Manual Activation Required</string>
    <string name="activated">Activated</string>
    <string name="settings">Settings</string>
    <string name="toggle">Toggle</string>
    <!--Clicker Settings-->
    <string name="turn_on_clicker">Turn On Clicker</string>
    <string name="show_popup_text">Show Popup Text</string>
    <string name="show_button_bar">Show Button Bar</string>
    <string name="character_settings">Character Settings</string>
    <!--Information-->
    <string name="instruction_manual">Instruction Manual</string>
    <string name="mit_license">MIT License</string>
    <string name="release_notes">Release Notes</string>
    <!--InfoReader-->
    <string name="instruction_manual_text">1. HOW TO USE APP\n
                        Simply follow the on screen instructions and click on the character.\n
                        \n
                        2. AUTOCLICK\n
                        Tap the words \"Press Calliope\" and the text will become \"Sit Back &amp; Chill\". This will allow the app to autoplay random noises continuously\n
                        \n
                        3. Download Assets\n
                        Go to the Settings Menu and you will see a button that says Downloads. You can Audio, Image and Video here\n
                        \n
                        4. DEVELOPER MODE\n
                        To unlock Developer mode, Goto Settings tap Version at least 7 times, developer mode merely unlocks unstable features that are currently in development\n
                        \n
                        \n</string> <!--Needs translations-->
    <string name="release_notes_text">/***REMOVED FEATURES***/\n
                                •Alarm Clock (ANDROID INCOMPATIBILITY)\n
                                \n
                                \n
                                /***FIXES***/\n
                                •New Randomizer\n
                                •Popup Text Error\n
                                \n
                                \n</string>
    <string name="error">Error</string>
    <string name="error_text">Oops Something must\'ve went wrong</string>


    <string name="noise1_text" translatable="false">I will eat the chicken now</string>
    <string name="noise2_text" translatable="false">I don\'t like chicken</string>
    <string name="noise3_text" translatable="false">Ninite</string>
    <string name="noise4_text" translatable="false">*Sleepy Noises*</string>
    <string name="noise5_text" translatable="false">Enough</string>
    <string name="noise6_text" translatable="false">GUH (softly)</string>
    <string name="noise7_text" translatable="false">I like purple</string>
    <string name="noise8_text" translatable="false">Goodnight</string>
    <string name="noise9_text" translatable="false">What?!</string>
    <string name="noise10_text" translatable="false">Smash x6</string>
    <string name="noise11_text" translatable="false">NO</string>
    <string name="noise12_text" translatable="false">Yada</string>
    <string name="noise13_text" translatable="false">*Clearing throat*</string>
    <string name="noise14_text" translatable="false">Hey!</string>
    <string name="noise15_text" translatable="false">Ok</string>
    <string name="noise16_text" translatable="false">UUUUGH</string>
    <string name="noise17_text" translatable="false">What did you do!</string>
    <string name="noise18_text" translatable="false">Geez</string>
    <string name="noise19_text" translatable="false">DAAAAAA!</string>
    <string name="noise20_text" translatable="false">EW STOP!</string>
    <string name="noise21_text" translatable="false">Gross gross</string>
    <string name="noise22_text" translatable="false">Away get away</string>
    <string name="noise23_text" translatable="false">Let me out</string>
    <string name="noise24_text" translatable="false">Fuck your friend</string>
    <string name="noise25_text" translatable="false">Ara Ara</string>
    <string name="noise26_text" translatable="false">Bitch</string>
    <string name="noise27_text" translatable="false">Fuck you (sweetly)</string>
    <string name="noise28_text" translatable="false">*Kiara unmute herself*</string>
    <string name="noise29_text" translatable="false">*Kiara calls Calli mama*</string>
    <string name="noise30_text" translatable="false">Peace</string>
    <string name="noise31_text" translatable="false">Deadbeats listen</string>
    <string name="noise32_text" translatable="false">Are you sure about that</string>
    <string name="noise33_text" translatable="false">If you really want I will</string>
    <string name="noise34_text" translatable="false">UUUUUHHHHH</string>
    <string name="noise35_text" translatable="false">Guh (Developer\'s Choice)</string>
    <string name="noise36_text" translatable="false">Here we go!</string>
    <string name="noise37_text" translatable="false">I\'m right here son</string>
    <string name="noise38_text" translatable="false">Now run into me</string>
    <string name="noise39_text" translatable="false">I\'m here</string>
    <string name="noise40_text" translatable="false">I would love to</string>
    <string name="noise41_text" translatable="false">Thank you</string>
    <string name="noise42_text" translatable="false">That\'s horrifying</string>
    <string name="noise43_text" translatable="false">THE FUCK</string>
    <string name="noise44_text" translatable="false">I can take him away</string>
    <string name="noise45_text" translatable="false">Not your mom</string>
    <string name="noise46_text" translatable="false">Yada (2nd variant)</string>
    <string name="noise47_text" translatable="false">Kimoi</string>
    <string name="noise48_text" translatable="false">Yamenasai</string>
    <string name="noise49_text" translatable="false">*Excited Calli*</string>
    <string name="noise50_text" translatable="false">GUH</string>
</resources>
