<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblvck"
    tools:context=".LegalInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingHorizontal="20dp"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/back_btn"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/information"
                android:textAlignment="viewStart"
                android:textColor="@color/porcelain"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/instruction_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:textColor="@color/porcelain"
                android:layout_marginBottom="5dp"
                android:text="@string/instruction_manual" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/app_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:textColor="@color/porcelain"
                android:layout_marginBottom="5dp"
                android:text="@string/mit_license" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/release_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:textColor="@color/porcelain"
                android:layout_marginBottom="5dp"
                android:text="@string/release_notes" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>